[Update]レイアウト完了

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,4 +20,43 @@
    box-sizing: border-box;
  }
  
+ h1{
+    margin: 0.67em 0px;
+    font-weight: bold;
+ }
  
+ h2{
+    margin: 0.83em 0px;
+ }
+ 
+ p{
+   margin: 33px; 
+ }
+ 
+ a{
+    color: #666666;
+ }
+ 
+ td{
+    padding: 0px 5px 7px;
+ }
+ 
+ label{
+    display: block;
+ }
+ 
+ body{
+    color: #333333;
+    margin: 33px;
+    line-height: 18px;
+    font-size: 13px;
+    font-family: verdana, arial, helvetica, sans-serif;
+ }
+
+.field{
+   margin-bottom: 10px;
+}
+
+.actions{
+   margin-bottom: 10px;
+}
