--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,2 +1,17 @@
-<h1>Books#edit</h1>
-<p>Find me in app/views/books/edit.html.erb</p>
+<h1><strong>Editing Book</strong></h1>
+
+<%= form_with model:@book, url:update_show_path(@book.id), method: :patch do |f| %>
+<div class="field">
+  <label for="book_title">Title</label>
+  <%= f.text_field :title %>
+</div>
+  <div class="field">
+  <label for="book_body">Body</label>
+  <%= f.text_area :body %>
+</div>
+  <div class="actions">
+  <%= f.submit ' Update Book ' %>
+</div>
+<% end %>
+
+<%= link_to 'Show', show_path(@book.id) %>  |  <%= link_to 'Back', book_path %>
