--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,2 +1,42 @@
-<h1>Books#index</h1>
-<p>Find me in app/views/books/index.html.erb</p>
+<h1><strong>Books</strong></h1>
+
+  <table>
+    <thead>
+      <tr>
+        <th>Title</th>
+        <th>Body</th>
+        <th colspan="3"></th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @books.each do |book| %>
+      <tr>
+        <td><%= book.title %></td>
+        <td><%= book.body %></td>
+        <td>
+          <%= link_to 'Show', show_path(book.id) %>
+        </td>
+        <td>
+          <%= link_to 'Edit', edit_path(book.id) %>
+        </td>
+        <td>
+          <%= link_to 'Destroy', destroy_show_path(book.id), method: :delete,"data-confirm" => "Are you sure?" %>
+        </td>
+      </tr>
+      <% end %>
+    </tbody>
+  </table>
+  <h2>New book</h2>
+    <%= form_with model: @book do |f| %>
+    <div class="field">
+      <label for="book_title">Title</label>
+      <%= f.text_field :title %>
+    </div>
+    <div class="field">
+      <label for="book_body">Body</label>
+      <%= f.text_area :body %>
+    </div>
+    <div class="actions">
+      <%= f.submit ' Create Book ' %>
+    </div>
+    <% end %>
