--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,14 +1,15 @@
-<h1>
-  <strong>ようこそ Bookers へ！</strong>
+<h1>ようこそ  
+<strong>Bookers</strong>
+  へ！
 </h1>
 
 <p>
-  <strong>Bookers</strong>
+<strong>Bookers</strong>
   では、さまざまな書籍に関するあなたの意見や
 </p>
-
 <p>
-  印象を共有し交換することができます
+印象を共有し交換することができます
 </p>
-
+<p>
 <%=link_to "start",book_path %>
+</p>
