--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,3 +1,7 @@
+<p id="notice">
+<%= flash[:notice] %>
+</p>
+
 <h1><strong>Books</strong></h1>
 
   <table>
@@ -27,6 +31,37 @@
     </tbody>
   </table>
   <h2>New book</h2>
+  <% if @book.errors.any? %>
+  <div id="error_explanation">
+    <h2><%= @book.errors.count %> errors prohibited this book from being saved:</h2>
+    <ul>
+      <% @book.errors.full_messages.each do |message| %>
+       <li><%= message %></li>
+      <% end %>
+    </ul>
+  </div>
+    <%= form_with model: @book do |f| %>
+     <div class="field">
+      <div class="field_with_errors">
+        <label for="book_title">Title</label>
+      </div>
+      <div class="field_with_errors">
+        <%= f.text_field :title %>
+      </div>
+     </div>
+     <div class="field">
+      <div class="field_with_errors">
+        <label for="book_body">Body</label>
+      </div>
+      <div class="field_with_errors">
+        <%= f.text_area :body %>
+      </div>
+     </div>
+      <div class="actions">
+        <%= f.submit ' Create Book ' %>
+      </div>
+    <% end %>
+  <% else %>
     <%= form_with model: @book do |f| %>
     <div class="field">
       <label for="book_title">Title</label>
@@ -40,3 +75,5 @@
       <%= f.submit ' Create Book ' %>
     </div>
     <% end %>
+  <% end %>
+   
