--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,17 +1,49 @@
 <h1><strong>Editing Book</strong></h1>
 
-<%= form_with model:@book, url:update_show_path(@book.id), method: :patch do |f| %>
-<div class="field">
-  <label for="book_title">Title</label>
-  <%= f.text_field :title %>
-</div>
-  <div class="field">
-  <label for="book_body">Body</label>
-  <%= f.text_area :body %>
-</div>
-  <div class="actions">
-  <%= f.submit ' Update Book ' %>
-</div>
+<% if @book.errors.any? %>
+  <div id="error_explanation">
+    <h2><%= @book.errors.count %> errors prohibited this book from being saved:</h2>
+    <ul>
+      <% @book.errors.full_messages.each do |message| %>
+       <li><%= message %></li>
+      <% end %>
+    </ul>
+  </div>
+     <%= form_with model:@book, url:update_show_path(@book.id), method: :patch do |f| %>
+     <div class="field">
+      <div class="field_with_errors">
+        <label for="book_title">Title</label>
+      </div>
+      <div class="field_with_errors">
+        <%= f.text_field :title %>
+      </div>
+     </div>
+     <div class="field">
+      <div class="field_with_errors">
+        <label for="book_body">Body</label>
+      </div>
+      <div class="field_with_errors">
+        <%= f.text_area :body %>
+      </div>
+     </div>
+      <div class="actions">
+        <%= f.submit ' Update Book ' %>
+      </div>
+    <% end %>
+<% else %>
+    <%= form_with model:@book, url:update_show_path(@book.id), method: :patch do |f| %>
+    <div class="field">
+      <label for="book_title">Title</label>
+      <%= f.text_field :title %>
+    </div>
+    <div class="field">
+      <label for="book_body">Body</label>
+      <%= f.text_area :body %>
+    </div>
+    <div class="actions">
+      <%= f.submit ' Update Book ' %>
+    </div>
+    <% end %>
 <% end %>
 
 <%= link_to 'Show', show_path(@book.id) %>  |  <%= link_to 'Back', book_path %>
