--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -9,7 +9,7 @@
       <% end %>
     </ul>
   </div>
-     <%= form_with model:@book, url:update_show_path(@book.id), method: :patch do |f| %>
+     <%= form_with model:@book, url:book_path(@book.id), method: :patch do |f| %>
      <div class="field">
       <div class="field_with_errors">
         <label for="book_title">Title</label>
@@ -31,7 +31,7 @@
       </div>
     <% end %>
 <% else %>
-    <%= form_with model:@book, url:update_show_path(@book.id), method: :patch do |f| %>
+    <%= form_with model:@book, url:book_path(@book.id), method: :patch do |f| %>
     <div class="field">
       <label for="book_title">Title</label>
       <%= f.text_field :title %>
@@ -46,4 +46,4 @@
     <% end %>
 <% end %>
 
-<%= link_to 'Show', show_path(@book.id) %>  |  <%= link_to 'Back', book_path %>
+<%= link_to 'Show', book_path(@book.id) %>  |  <%= link_to 'Back', books_path %>
