--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -18,13 +18,13 @@
         <td><%= book.title %></td>
         <td><%= book.body %></td>
         <td>
-          <%= link_to 'Show', show_path(book.id) %>
+          <%= link_to 'Show', book_path(book.id) %>
         </td>
         <td>
-          <%= link_to 'Edit', edit_path(book.id) %>
+          <%= link_to 'Edit', edit_book_path(book.id) %>
         </td>
         <td>
-          <%= link_to 'Destroy', destroy_show_path(book.id), method: :delete,"data-confirm" => "Are you sure?" %>
+          <%= link_to 'Destroy', book_path(book.id), method: :delete,"data-confirm" => "Are you sure?" %>
         </td>
       </tr>
       <% end %>
@@ -76,4 +76,3 @@
     </div>
     <% end %>
   <% end %>
-   
