--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -11,4 +11,4 @@
   <%= @book.body %>
 </p>
 
-<%= link_to 'Edit', edit_path(@book.id) %>  |  <%= link_to 'Back', book_path %>
+<%= link_to 'Edit', edit_book_path(@book.id) %>  |  <%= link_to 'Back', books_path %>
