--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,4 +1,4 @@
-<h1>ようこそ  
+<h1>ようこそ
 <strong>Bookers</strong>
   へ！
 </h1>
@@ -11,5 +11,5 @@
 印象を共有し交換することができます
 </p>
 <p>
-<%=link_to "start",book_path %>
+<%=link_to "start",books_path %>
 </p>
